--- a/part4/chatper5/MovieApp/app/src/main/res/navigation/nav_graph.xml
+++ b/part4/chatper5/MovieApp/app/src/main/res/navigation/nav_graph.xml
@@ -7,10 +7,21 @@
     <fragment
         android:id="@+id/fragment_feed"
         android:name="com.sjhstudio.compose.movieapp.features.feed.FeedFragment"
-        android:label="Feed" />
+        android:label="Feed">
+
+        <action
+            android:id="@+id/action_feed_to_detail"
+            app:destination="@id/fragment_detail"
+            app:launchSingleTop="true" />
+    </fragment>
 
     <fragment
         android:id="@+id/fragment_detail"
         android:name="com.sjhstudio.compose.movieapp.features.detail.DetailFragment"
-        android:label="Detail" />
+        android:label="Detail">
+
+        <argument
+            android:name="movie_name"
+            app:argType="string" />
+    </fragment>
 </navigation>
